mobile theme menu z-index fix

--- a/less/sweetp-menu.less
+++ b/less/sweetp-menu.less
@@ -185,6 +185,10 @@ label ul a:hover {
         float: left;
         margin: 5px 4px 0 0;
     }
+
+    .slideout-menu {
+        z-index: 10000 !important;
+    }
 }
 
 @media screen and (max-width: 375px) {
